Wed Feb 26 12:17:05 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (maintainer-clean): Delete some more stuff.

Fri Feb 21 20:38:25 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-subst-config-vals): Remove extra -L from
	RLD_FLAG substitution.

Thu Feb 20 02:58:05 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0.4 released.

	* configure.in (SH_LDFLAGS): Add -fPIC for HP-UX.

Tue Feb 18 09:22:04 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (SH_LDFLAGS): Fix typo in last change.
	(RLD_FLAG): Don't forget to put -shared in SH_LDFLAGS for alpha
	systems.

	* Version 2.0.3 released.

Tue Feb 18 00:33:36 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (binary-dist): Strip src/octave and info/info.

	* examples/oregonator.m, examples/oregonator.cc: New files.
	* examples/Makefile.in (SOURCES): Add them to the list.

Fri Feb 14 14:07:08 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* install-octave: Don't fail if LIBRARIES file is missing.
	Don't try to install .oct files if there aren't any.

	* octMakefile.in (bin-dist-type): Delete target.
	(binary-dist): Don't depend on bin-dist-type.
	Don't delete config.status or config.h here.
	(BINDISTFILES): Include config.status and config.h here.
	(dist): Don't delete Makefile here.
	(binary-dist): Avoid empty chmod command.

	* Makefile.in (config-check): New target.
	(all): Depend on config-check.
	(static-binary-distribution, dynamic-binary-distribution): Delete.
	(binary-distribution): If in source directory, run configure and
	make with appropriate args.

	* octMakefile.in (maintainer-clean, distclean): Don't delete Makefile.
	(CONF_DISTFILES): Distribute Makefile too.

Thu Feb 13 16:25:09 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (SH_LD, SH_LDFLAGS): New variables.
	* Makeconf.in: Substitute them.

	* configure.in (SH_LIBS, SH_FLIBS, SH_TERMLIBS): Delete.

	* Makeconf.in (SH_LIBS, SH_FLIBS, SH_TERMLIBS): Delete.
