@@ -21,7 +21,7 @@ dnl Copyright (C) 1996 John W. Eaton
 ### Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 ### 02111-1307, USA. 
 
-AC_REVISION($Revision: 1.257 $)
+AC_REVISION($Revision: 1.258 $)
 AC_PREREQ(2.9)
 AC_INIT(src/octave.cc)
 AC_CONFIG_HEADER(config.h)
@@ -619,8 +619,9 @@ else
 fi
 
 
-f77_rules_frag=Makefrag.f77
+f77_rules_frag=/dev/null
 if $have_fortran_compiler; then
+  f77_rules_frag=Makefrag.f77
 changequote(,)dnl
   cat << \EOF > $f77_rules_frag
 
@@ -987,7 +988,7 @@ case "$canonical_host_type" in
   ;;
 esac
 
-bsd_gcc_kluge_targets_frag=
+bsd_gcc_kluge_targets_frag=/dev/null
 case "$canonical_host_type" in
   *-*-386bsd* | *-*-openbsd* | *-*-netbsd* | *-*-freebsd*)
     bsd_gcc_kluge_targets_frag=Makefrag.bsd
